--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <title>Sexualidad | Introducción a la salud mental </title>
 </head>
 <body>
-
+  
+  <div class="no"><p>Por favor voltea tu dispositivo para visualizar este sitio web o utiliza un dispositivo más grande</p></div>
+  
   <div class="main-container">
 
     <div class="buttons1">
