--- a/disfunsiones.html
+++ b/disfunsiones.html
@@ -137,7 +137,7 @@
             </div>
         
             <div class="section section5">
-                <h2>Escucha este pequeña cápsula por parte del Departamento de Radio-DGDC de la UNAM sobre disfunciones sexuales en hombre, mujer y su incidencia :)</h2>
+                <h2>Escucha esta pequeña cápsula por parte del Departamento de Radio-DGDC de la UNAM sobre disfunciones sexuales en hombre, mujer y su incidencia :)</h2>
                 <div>
                    <audio src="./audio/audio_radiosfera_disfunciones.mp3" controls="controls" preload="auto"></audio>
                 </div>
